k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: manutencao
  name: manutencao
spec:
  externalTrafficPolicy: Cluster
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: manutencao
  sessionAffinity: None
  type: NodePort
